--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#accessKey=jawad
+#secret=123456
+bucketName=jawad.newbucket
+#region=us-west-2
+
+cloud.aws.region.auto: false
+cloud.aws.region.static: us-west-2
+cloud.aws.credentials.accessKey: jawad
+cloud.aws.credentials.secretKey: 123456
+aws.service-endpoint: http://localhost:4566
+cloud.aws.stack.auto = false
